2.0.0 - Folia compatibility patch (non-functional, WIP)
Complete refactor of scheduler system for Folia 1.21.11 compatibility

- Rewrite FoliaScheduler with GlobalRegionScheduler/RegionScheduler/EntityScheduler/AsyncScheduler

- Fix SkyEventManager tick system

- Fix event implementations for Folia safety

- Fix async/network operations

- Add graceful degradation for MySQL/Redis/RabbitMQ

- Update version to 2.0.1